# lis2duxs12-rs

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
bsp/: Cargo.toml  README.md  build.rs
bsp/src/: board_macro.rs  main.rs
bsp/src/examples/: fifo_irq.rs  free_fall.rs  fsm_glance.rs  mlc_activity_mobile.rs  pedometer.rs  pedometer_fifo.rs  qvar.rs  read_irq.rs  read_polling.rs  self_test.rs  sixd_position.rs  tap.rs  tilt.rs  wakeup.rs
examples/free_fall_stm32f401re/: Cargo.toml  README.md
examples/free_fall_stm32f401re/src/: main.rs
examples/free_fall_stm32f401re_embassy/: Cargo.toml  README.md
examples/free_fall_stm32f401re_embassy/src/: main.rs
examples/fsm_glance_stm32f401re/: Cargo.toml  README.md  build.rs
examples/fsm_glance_stm32f401re/src/: glance_detection.rs  main.rs
examples/fsm_glance_stm32f401re_embassy/: Cargo.toml  README.md  build.rs
examples/fsm_glance_stm32f401re_embassy/src/: main.rs
examples/mlc_activity_mobile_stm32f401re/: Cargo.toml  README.md  build.rs
examples/mlc_activity_mobile_stm32f401re/src/: main.rs  mlc_activity_recognition.rs
examples/mlc_activity_mobile_stm32f401re_embassy/: Cargo.toml  README.md  build.rs
examples/mlc_activity_mobile_stm32f401re_embassy/src/: main.rs
examples/pedo_fifo_stm32f401re/: Cargo.toml  README.md
examples/pedo_fifo_stm32f401re/src/: main.rs
examples/pedo_fifo_stm32f401re_embassy/: Cargo.toml  README.md
examples/pedo_fifo_stm32f401re_embassy/src/: main.rs
examples/pedometer_stm32f401re/: Cargo.toml  README.md
examples/pedometer_stm32f401re/src/: main.rs
examples/pedometer_stm32f401re_embassy/: Cargo.toml  README.md
examples/pedometer_stm32f401re_embassy/src/: main.rs
examples/qvar_read_data_stm32f401re/: Cargo.toml  README.md
examples/qvar_read_data_stm32f401re/src/: main.rs
examples/qvar_read_data_stm32f401re_embassy/: Cargo.toml  README.md
examples/qvar_read_data_stm32f401re_embassy/src/: main.rs
examples/read_data_drdy_stm32f401re/: Cargo.toml  README.md
examples/read_data_drdy_stm32f401re/src/: main.rs
examples/read_data_drdy_stm32f401re_embassy/: Cargo.toml  README.md
examples/read_data_polling_stm32f401re/: Cargo.toml  README.md
examples/read_data_polling_stm32f401re/src/: main.rs
examples/read_data_polling_stm32f401re_embassy/: Cargo.toml  README.md
examples/read_fifo_irq_stm32f401re/: Cargo.toml  README.md
examples/read_fifo_irq_stm32f401re_embassy/: Cargo.toml  README.md
examples/self_test_stm32f401re/: Cargo.toml
examples/self_test_stm32f401re_embassy/: Cargo.toml  README.md
examples/sixd_stm32f401re/: Cargo.toml  README.md
examples/sixd_stm32f401re_embassy/: Cargo.toml  README.md
examples/tap_stm32f401re/: Cargo.toml  README.md
examples/tap_stm32f401re_embassy/: Cargo.toml  README.md
examples/tilt_stm32f401re/: Cargo.toml  README.md
examples/tilt_stm32f401re_embassy/: Cargo.toml  README.md
examples/wakeup_stm32f401re/: Cargo.toml  README.md
examples/wakeup_stm32f401re_embassy/: Cargo.toml  README.md
src/: driver.rs  lib.rs  prelude.rs
src/register/: advanced.rs  embedded.rs  main.rs  mod.rs
(+14 files in other folders)
